--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" content="width=device-width, initial-scale=1.0">
     <title> Tuna Chatroom </title>
     <!-- Google fonts. -->
     <link href='https://fonts.googleapis.com/css?family=Bungee Outline' rel='stylesheet'/>
