--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-database.js"></script>
     <script type="text/javascript" src="index.js"></script>
-    <title>title</title>
+    <title>TunaChat</title>
 </head>
 <body>
     <div class="username-container" id="usrcon">
