--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
     <title>TunaChat</title>
 </head>
 <body>
+    <div id="outdated-ver" style="display: none;">
+        <h4 id="error-message">
+            Tarihi geçmiş bir sürüm kullanılyor
+            - Çerezleri temizlemeyi deneyin
+        </h4>
+    </div>
+    <div id="userspace">
     <div class="username-container" id="usrcon">
         <p class="title">
             TunaChat
@@ -27,5 +34,6 @@
             <button class="message-send" id="msgsend" onclick="send_message()">Gönder</button>
         </div>
     </div>
+</div>
 </body>
 </html>
