--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script type="text/javascript" src="index.js"></script>
     <title>TunaChat</title>
 </head>
-<body>
+<body style="background-color: #303030;">
     <div id="outdated-ver" style="display: none;">
         <h4 id="error-message">
             Tarihi geçmiş bir sürüm kullanılyor
