--- a/index.html
+++ b/index.html
@@ -7,25 +7,29 @@
     <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-database.js"></script>
     <script src="index.js"></script>
-    <title>TunaChat</title>
+    <title>T</title>
 </head>
 <body style="background-color: #303030;" id="bg">
+    <img src="hamburger.png" class="mobile-navigation-hamburger hide" onclick="openChannelList()" id="mhamburger">
+    <div class="channel-list channel-list-m" id="channel-l">
+        <p class="channel-list-title">Kanallar</p>
+        <hr>
+        <div class="channel-showroom">
+            <p class="current-channel-collider" onclick="" id="genel">Genel</p>
+            <p class="channel-collider" onclick="switchToChannel('okul')" id="okul">Okul&Ders</p>
+        </div>
+        <button class="mobile-nav-close-button" onclick="closeChannelList()">Menüyü Kapat</button>
+    </div>
     <div id ="dialogc" class="dialog-container">
         <div class="dialog-box">
             <p class="dialog-title">YENİLİKLER</p>
             <hr class="newspaper-spl">
-                <li class="newspaper-list">Yazının ekranın dışına taşma sorunu düzeltildi</li>
-                <li class="newspaper-list">Yenilikler ekranı eklendi</li>
-                <li class="newspaper-list">Scroll Bar (Kaydırma çubuğu) yeniden tasarlandı</li>
-                <li class="newspaper-list">Yeni arkaplan gradyan efekti eklendi! açmak için sohbet kutucuğuna "/extal NewGradientBG 1" yazın kapatmak için ise "/extal NewGradientBG 0" yazın!</li>
-                <li class="newspaper-list">Blur efektleri optimize edildi ve performans sorunu olan elementler için donanım hozlandırma açıldı</li>
+                <li class="newspaper-list">Enter tuşu fonksiyonu eklendi</li>
+                <li  class="newspaper-list">Yazım hatası düzeltildi</li>
+                <li class="newspaper-list">Bazı elementlerin stili güncellendi</li>
+                <li class="newspaper-list">Statik kanal sistemi eklendi</li>
                 <p class="newspaper-footer">Bu güncelleme bunlarla sınırlı olmamakla beraber bunlarıda içerebilir</p>
-                    <li class="newspaper-footer-list">Yönetim konsolu iyileştirmeleri</li>
-                    <li class="newspaper-footer-list">Yüksekkurul rütbe değişiklikleri</li>
-                    <li class="newspaper-footer-list">SecUr güncelleme paketi</li>
-                    <li class="newspaper-footer-list">Secret Service gizli güncelemeleri</li>
-                    <li class="newspaper-footer-list">Yönetim paneli RegEX güncelemeleri</li>
-                <p class="newspaper-footer"> Bu tip güncellemeler gizli yapılacak ve sayaç attıracaktır, bu websiteye girdiğiniz anda bu güncellemeleri kabul etmiş olursunuz</p>
+                <li class="newspaper-footer-list">Veri işleme&yönetme ile alakalı güvenlik güncellemeleri</li>
             <div class="newspaper-bc"><button class="newspaper-close-button" onclick="closeDialog()">Anladım</button></div>
         </div>
     </div>
