--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-database.js"></script>
     <script src="index.js"></script>
-    <title>T</title>
+    <title>TunaChat</title>
 </head>
 <body style="background-color: #303030;" id="bg">
     <img src="hamburger.png" class="mobile-navigation-hamburger hide" onclick="openChannelList()" id="mhamburger">
