--- a/channels/okul.html
+++ b/channels/okul.html
@@ -1,1 +1,65 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="../index.css" rel="stylesheet">
+    <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-database.js"></script>
+    <script src="../index.js"></script>
+    <title>TunaChat</title>
+</head>
+<body style="background-color: #303030;" id="bg">
+    <img src="../hamburger.png" class="mobile-navigation-hamburger hide" onclick="openChannelList()" id="mhamburger">
+    <div class="channel-list channel-list-m" id="channel-l">
+        <p class="channel-list-title">Kanallar</p>
+        <hr>
+        <div class="channel-showroom">
+            <a href="../index.html"><p class="channel-collider" id="genel">Genel</p></a>
+            <p class="current-channel-collider" id="okul">Okul&Ders</p>
+        </div>
+        <button class="mobile-nav-close-button" onclick="closeChannelList()">Menüyü Kapat</button>
+    </div>
+    <div id ="dialogc" class="dialog-container">
+        <div class="dialog-box">
+            <p class="dialog-title">YENİLİKLER</p>
+            <hr class="newspaper-spl">
+                <li class="newspaper-list">Enter tuşu fonksiyonu eklendi</li>
+                <li  class="newspaper-list">Yazım hatası düzeltildi</li>
+                <li class="newspaper-list">Bazı elementlerin stili güncellendi</li>
+                <li class="newspaper-list">Statik kanal sistemi eklendi</li>
+                <p class="newspaper-footer">Bu güncelleme bunlarla sınırlı olmamakla beraber bunlarıda içerebilir</p>
+                <li class="newspaper-footer-list">Veri işleme&yönetme ile alakalı güvenlik güncellemeleri</li>
+            <div class="newspaper-bc"><button class="newspaper-close-button" onclick="closeDialog()">Anladım</button></div>
+        </div>
+    </div>
+    <div id="outdated-ver" style="display: none;">
+        <h4 id="error-message">
+            Tarihi geçmiş bir sürüm kullanılyor
+            - Çerezleri temizlemeyi deneyin
+        </h4>
+    </div>
+    <div id="userspace">
+    <div class="username-container" id="usrcon">
+        <p class="title">
+            TunaChat
+        </p>
+        <input placeholder="Takma İsim" maxlength="15" class="username-input" id="username-input">
+        <button class="login-button" id="loginbtn" onclick="getToChat()">
+            Giriş Yap
+        </button>
+    </div>
+    <div class="message-showroom" id="msgshowroom">
+        <div id="messagerecv">
+        </div>
+        <div class="message-box-container">
+            <input placeholder="Mesaj Yaz" class="message-box" id="msgbox">
+            <button class="message-send" id="msgsend" onclick="send_message()">Gönder</button>
+        </div>
+    </div>
+</div>
+<script>
+    localStorage.setItem("current-channel", "okul")
+</script>
+</body>
+</html>
