--- a/duyurular.html
+++ b/duyurular.html
@@ -27,7 +27,7 @@
             <a href="channels/okul.html" style="text-decoration: none;"><p class="channel-collider" id="okul">Okul&Ders</p></a>
             <hr class="quick-actionbar-splitter">
             <button class="changelog-button" style="right: 75px; display: none;" id="logOffButton" onclick="localStorage.removeItem('name');location.reload()">Oturumu Kapat</button>
-            <a href="changelog.html"><button class="changelog-button">Yenilikler</button>
+            <a href="changelog.html"><button class="changelog-button">Yenilikler</button></a>
         </div>
         <button class="mobile-nav-close-button" onclick="closeChannelList()" id="closeMenuButton">Menüyü Kapat</button>
         </div>
