--- a/channels/okul.html
+++ b/channels/okul.html
@@ -19,7 +19,7 @@
         <p class="channel-list-title">Kanallar</p>
         <hr>
         <div class="ann-div">
-            <a href="duyurular" style="text-decoration: none;"><p class="ann" id="okul">Duyurular</p></a>
+            <a href="../duyurular" style="text-decoration: none;"><p class="ann" id="okul">Duyurular</p></a>
             </div>
         <hr>
         <div class="channel-showroom">
