--- a/changelog.html
+++ b/changelog.html
@@ -14,6 +14,9 @@
     </p>
     <hr>
     <div>
+        <p>Versiyon 0.5.3 ( VSPN 3)</p>
+        <li>Gönder tuşunun büyük gözükme sorunu düzeltildi</li>
+        <hr>
         <p>Versiyon 0.5.2 ( VSPN 3 )</p>
         <li>Tutarlılık iyileştirildi</li>
         <li>Mobil cihazlar için blur ( bulanıklık efekti ) kaldırıldı</li>
