--- a/index.html
+++ b/index.html
@@ -37,30 +37,8 @@
             <div class="dialog-title-wrapper">
             <p class="dialog-title">YENİLİKLER</p>
             </div>
+            <li class="newspaper-list">Gönder tuşunun büyük gözükme sorunu düzeltildi</li>
             <hr class="newspaper-spl">
-            <li class="newspaper-list">Tutarlılık iyileştirildi</li>
-            <li class="newspaper-list">Mobil cihazlar için blur ( bulanıklık efekti ) kaldırıldı</li>
-            <li class="newspaper-list">Mobil cihazlar için mesaj kutusu görünümü yeniden tasarlandı</li>
-            <li class="newspaper-list">Mobil cihazlar için yenilikler sayfası yenilendi</li>
-            <li class="newspaper-list">Mobil cihazlar için kanal listesine ufak dokunuşlar yapıldı</li>
-            <li class="newspaper-list">Yönetici simgesi değişti ve yönetici simgesindeki invert efekti kaldırıldı</li>
-            <li class="newspaper-list">Küfür filtresi geliştirildi</li>
-            <li class="newspaper-list">Mobil cihazlar için mesaj gönderme tuşu yeniden tasarlandı</li>
-            <li class="newspaper-list"><a href="changelog">ChangeLog</a> yani yenilikler sayfası eklendi</li>
-            <li class="newspaper-list">Dinamik sayfa başlıkları eklendi</li>
-            <li class="newspaper-list">Mobil cihazlar için gönder tuşu yeniden tasarlandı</li>
-            <li class="newspaper-list">Versiyon kontrolü ve eski istemcilerin yönetimi ile ilgili güncellemeler yapıldı</li>
-            <li class="newspaper-list">Yönetici konsolu eklendi</li>
-            <li class="newspaper-list">Veritabanı dosya sistemi ve izinleri değiştirildi</li>
-            <li class="newspaper-list">Versiyon yönetimi politikası güncellendi</li>
-            <li class="newspaper-list">Duyurular sayfası eklendi</li>
-            <li class="newspaper-list">Yeni bir yönetici eklendi :)</li>
-            <li class="newspaper-list">Geri bildirim gönderin pop up u eklendi</li>
-            <li class="newspaper-list">Yenilikler sayfası kaydırılabilir oldu</li>
-            <li class="newspaper-list">Yenilikler sayfasının başlığına ufak dokunuşlar yapıldı</li>
-            <li class="newspaper-list">Kanal listesine yeni efektler eklendi</li>
-            <li class="newspaper-list">Yenilikler sayfasında anladım butonuna tıkladıktan sonra sadece mobil cihazlarda gözüken hamburger simgesinin bilgisayarlarda görünme sorunu düzeltildi</li>
-            <li class="newspaper-list">Yöneticiler için oturumu kapat tuşu eklendi</li>
                 <p class="newspaper-footer">Bu güncelleme bunlarla sınırlı olmamakla beraber bunlarıda içerebilir</p>
                 <li class="newspaper-footer-list">Veri işleme&yönetme ile alakalı güvenlik güncellemeleri</li>
             <div class="newspaper-bc"><button class="newspaper-close-button" onclick="closeDialog()">Anladım</button></div>
